--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,27 @@ body{
 }
 body > section{
 }
+span.fb:before{
+  content: '\e8ca';
+  font-family: 'icomoon';
+  font-size: 20px;
+  color:#41718F;
+      text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
+}
+span.chat:before{
+  content: '\e6dc';
+  font-family: 'icomoon';
+  font-size: 20px;
+  color:#DCB37A;
+      text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
+}
+span.forum:before{
+  content: '\e6e1';
+  font-family: 'icomoon';
+  font-size: 20px;
+  color:#569C6A;
+      text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
+}
 span.da-img:before{
   content: '\e685';
   font-family: 'icomoon';
@@ -45,6 +66,7 @@ span.da-img:before{
   color:#fff;
       text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
 }
+
 #ball{
    -moz-animation-duration: 2s;
   -moz-animation-iteration-count: infinite;
@@ -82,13 +104,12 @@ float: left;
 #slide1 #slide1-over h1{
      text-shadow:1px 1px 3px rgba(0, 0, 0, 0.8);
    margin:100px auto;  
-   color:#EA803D;
+   color:#DAEDE2;
    cursor:pointer;
    transition:all 0.3s ease-in-out;
 }
 
 #slide1 #slide1-over .content .text p{
-
      margin-bottom: 27px;
      font-size: 18px;
    line-height:1.8em;
@@ -105,8 +126,6 @@ float: left;
    z-index:10;
      margin: 2em auto 0.3em;
        margin-top:100px;
-
-
 } 
  
  .da-link {
@@ -135,7 +154,7 @@ float: left;
 }
 #slide1{
   width:100%;
-  height:700px;
+  height:490px;
   position:relative;
 }
 
@@ -146,7 +165,24 @@ float: left;
   background:rgba(18, 11, 5, 0.4);
   padding: 30px 0px 50px;
 }
-
+ul.extras{
+	width:350px;
+	position: absolute;
+	margin-left: 85%;
+	z-index: 2000;
+	margin-top: 30px;
+}
+ul.extras li{
+	list-style: none;
+	border-bottom: 1px solid #000;
+	margin: 0px 3px;
+	text-align: center;
+	padding: 5px;
+	border:3px solid #fff;
+	border-radius: 50%;
+	display: inline-block;
+	cursor: pointer;
+}
 /*= Selection List 
 --------------------------------------------------------*/
 #slide1 #slide1-over .content .selection_wrapper{
