--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,65 @@ span.da-img:before{
   color:#fff;
       text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
 }
+span#settings:before{
+  content: '\e7a7';
+  font-family: 'icomoon';
+  font-size: 36px;
+  color:#fff;
+      text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
+}
+span#up-arrow:before{
+  content: '\e7a3';
+  font-family: 'icomoon';
+  font-size: 24px;
+  color:#fff;
+      text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
+}
+span#down-arrow:before{
+  content: '\e7a1';
+  font-family: 'icomoon';
+  font-size: 24px;
+  color:#fff;
+      text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
+}
+span#rss:before{
+  content: '\e8be';
+  font-family: 'icomoon';
+  font-size: 24px;
+  color:#fff;
+      text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
+}
+span#mode:before{
+  content: '\e820';
+  font-family: 'icomoon';
+  font-size: 24px;
+  color:#fff;
+      text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
+}
+span#extras:before{
+  content: '\e81b';
+  font-family: 'icomoon';
+  font-size: 24px;
+  color:#fff;
+      text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
+}
+
+span.ball:before{
+  content: '\e685';
+  font-family: 'icomoon';
+  font-size: 48px;
+  color:#fff;
+      text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
+}
+
+span.home:before{
+  content: '\e849';
+  font-family: 'icomoon';
+  font-size: 24px;
+  color:#000;
+      text-shadow:0px 2px 1px rgba(0, 0, 0, 0.3);
+}
+
 #ball{
    -moz-animation-duration: 2s;
   -moz-animation-iteration-count: infinite;
@@ -157,6 +216,23 @@ h3 {
   background: #DAEDE2;
 
 }
+/*= Navigational Controls
+--------------------------------------------------------*/
+#controls_wrapper{
+  position: fixed;
+  margin: 300px 95%;
+}
+#settings{
+  float: right;
+  position: relative;
+}
+#controls{
+  float: left;
+  position: relative;
+}
+#controls_wrapper ul li{
+  list-style: none;
+}
 /*= HEADER & NAVIGATION
 --------------------------------------------------------*/
 
@@ -173,7 +249,7 @@ h3 {
   display: none;
 }
 
-#nav { width: 85%; float:left;padding-top: 25px;}
+#nav { padding-top: 25px;}
 #logo{float: left;background:#333745;margin-left: 50px;z-index: 1;}
 #logo a{margin-left: 8px;}
 #nav ul{
@@ -187,7 +263,7 @@ h3 {
 
 #nav li{
   float: left;
-  width: 20%;
+  width: 14%;
   text-align: center;
   margin-top:6px;
 }
@@ -218,14 +294,6 @@ padding: 10px;
     background:#333745; 
 
 }
-
-
-#follow{
-  float: right;
-  margin-right: 50px;
-  margin-top: 22px;
-}
-
 
 /*= FOOTER 
 --------------------------------------------------------*/
@@ -275,7 +343,7 @@ height:390px;
      text-shadow:1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 
-.da-img{
+.ball{
      width: 50px;
      height: 50px;
      display: block;
@@ -355,7 +423,7 @@ float: left;
 margin-left:5%; 
 }
 #slide2 .content .text h2{
-text-align: right;
+text-align: center;
   color: #805F3D; 
   font-size: 60px;
 }
@@ -363,7 +431,7 @@ text-align: right;
   margin-bottom: 27px;
   font-size: 20px;
   color: #4f4f4f;
-  text-align: right;
+  text-align: left;
 }
 
 .down-link{
